hphp/test/slow/inout/bad-decl-2.php.expectf
Fatal error: A variadic parameter ('...') cannot have a modifier that changes the calling convention, like 'inout'. in %s/test/slow/inout/bad-decl-2.php on line 3